--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
  
     - name: Install dependencies
       run: |
-        mingw32-make install
+        make install
     - name: Run Tests
       run: |
-        mingw32-make test
+        make test
