--- a/delivery/.vscode/settings.json
+++ b/delivery/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/rochacbruno/Projects/codeshow/curso-flask/.venv/"
+    "python.pythonPath": "C:\Users\INFO02\Documents\Python\.venv"
 }
