--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,11 @@ jobs:
     - name: Install dependencies
       run: |
         make install
+
+    - name: Database Migrations
+      run: |
+        make init_db
+
     - name: Run Tests
       run: |
         make test
