--- a/delivery/.vscode/settings.json
+++ b/delivery/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\Users\INFO02\Documents\Python\.venv"
+    "python.pythonPath": "C:\\Users\\meteus\\Documents\\GitHub\\Python\\.venv"
 }
