--- a/delivery/Makefile
+++ b/delivery/Makefile
@@ -20,3 +20,10 @@ init_db:
 
 test:
 	FLASK_ENV=test pytest tests/ -v --cov=delivery
+
+format:
+	isort **/*.py
+	black -l 79 **/*.py
+
+run:
+	FLASK_APP=delivery/app.py FLASK_ENV=development flask run
