--- a/delivery/settings.toml
+++ b/delivery/settings.toml
@@ -9,7 +9,7 @@ EXTENSIONS = [
     "delivery.ext.cli:init_app",
     "delivery.ext.site:init_app",
 ]
-UPLOAD_FODER = "uploads"
+UPLOAD_FOLDER = "uploads"
 
 
 
