first steps flask login

--- a/delivery/settings.toml
+++ b/delivery/settings.toml
@@ -8,6 +8,7 @@ EXTENSIONS = [
     "delivery.ext.migrate:init_app",
     "delivery.ext.cli:init_app",
     "delivery.ext.site:init_app",
+    "delivery.ext.login.logar:init_app",
 ]
 UPLOAD_FOLDER = "uploads"
 
@@ -28,6 +29,7 @@ EXTENSIONS = [
     "delivery.ext.cli:init_app",
     "delivery.ext.toolbar:init_app",
     "delivery.ext.site:init_app",
+    "delivery.ext.login.logar:init_app",
 ]
 
 
