--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# files and photos
+**/*.jpg
+**/*.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -109,6 +113,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
 
 # Spyder project settings
 .spyderproject
